tests/negative/_cycle_back.orb
// TODO variadic opers
// TODO ptr implicit castable
import "tests/negative/test_import_cycle.orb";
